workspace-sf/force-app/main/default/objects/public_pagamento__x/public_pagamento__x.object-meta.xml
<CustomObject>
    <description>public$pagamento</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>public$pagamento</externalName>
    <label>public$pagamento</label>
    <pluralLabel>public$pagamento</pluralLabel>
</CustomObject>