workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/cnpjcpf__c.field-meta.xml
<CustomField>
    <fullName>cnpjcpf__c</fullName>
    <description>cnpjcpf</description>
    <externalDeveloperName>cnpjcpf</externalDeveloperName>
    <label>cnpjcpf</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>