workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/codigoexcecao__c.field-meta.xml
<CustomField>
    <fullName>codigoexcecao__c</fullName>
    <description>codigoexcecao</description>
    <externalDeveloperName>codigoexcecao</externalDeveloperName>
    <label>codigoexcecao</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>