workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/datacancelamento__c.field-meta.xml
<CustomField>
    <fullName>datacancelamento__c</fullName>
    <description>datacancelamento</description>
    <externalDeveloperName>datacancelamento</externalDeveloperName>
    <label>datacancelamento</label>
    <type>Date</type>
</CustomField>