workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/datapagamento__c.field-meta.xml
<CustomField>
    <fullName>datapagamento__c</fullName>
    <description>datapagamento</description>
    <externalDeveloperName>datapagamento</externalDeveloperName>
    <label>datapagamento</label>
    <type>Date</type>
</CustomField>