workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/dataprogramadapagamento__c.field-meta.xml
<CustomField>
    <fullName>dataprogramadapagamento__c</fullName>
    <description>dataprogramadapagamento</description>
    <externalDeveloperName>dataprogramadapagamento</externalDeveloperName>
    <label>dataprogramadapagamento</label>
    <type>Date</type>
</CustomField>