workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/descricao__c.field-meta.xml
<CustomField>
    <fullName>descricao__c</fullName>
    <description>descricao</description>
    <externalDeveloperName>descricao</externalDeveloperName>
    <label>descricao</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>