workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/descricaoexcecao__c.field-meta.xml
<CustomField>
    <fullName>descricaoexcecao__c</fullName>
    <description>descricaoexcecao</description>
    <externalDeveloperName>descricaoexcecao</externalDeveloperName>
    <label>descricaoexcecao</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>