workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/idconta__c.field-meta.xml
<CustomField>
    <fullName>idconta__c</fullName>
    <description>idconta</description>
    <externalDeveloperName>idconta</externalDeveloperName>
    <label>idconta</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>