workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/idobjeto__c.field-meta.xml
<CustomField>
    <fullName>idobjeto__c</fullName>
    <description>idobjeto</description>
    <externalDeveloperName>idobjeto</externalDeveloperName>
    <label>idobjeto</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>