workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/matricula__c.field-meta.xml
<CustomField>
    <fullName>matricula__c</fullName>
    <description>matricula</description>
    <externalDeveloperName>matricula</externalDeveloperName>
    <label>matricula</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>