workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/modalidade__c.field-meta.xml
<CustomField>
    <fullName>modalidade__c</fullName>
    <description>modalidade</description>
    <externalDeveloperName>modalidade</externalDeveloperName>
    <label>modalidade</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>