workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/motivo__c.field-meta.xml
<CustomField>
    <fullName>motivo__c</fullName>
    <description>motivo</description>
    <externalDeveloperName>motivo</externalDeveloperName>
    <label>motivo</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>