workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/susepcorretor__c.field-meta.xml
<CustomField>
    <fullName>susepcorretor__c</fullName>
    <description>susepcorretor</description>
    <externalDeveloperName>susepcorretor</externalDeveloperName>
    <label>susepcorretor</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>