workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/tipoconta__c.field-meta.xml
<CustomField>
    <fullName>tipoconta__c</fullName>
    <description>tipoconta</description>
    <externalDeveloperName>tipoconta</externalDeveloperName>
    <label>tipoconta</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>