workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/tipopagamento__c.field-meta.xml
<CustomField>
    <fullName>tipopagamento__c</fullName>
    <description>tipopagamento</description>
    <externalDeveloperName>tipopagamento</externalDeveloperName>
    <label>tipopagamento</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>