workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/tiporemuneracao__c.field-meta.xml
<CustomField>
    <fullName>tiporemuneracao__c</fullName>
    <description>tiporemuneracao</description>
    <externalDeveloperName>tiporemuneracao</externalDeveloperName>
    <label>tiporemuneracao</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>