workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/tributacao__c.field-meta.xml
<CustomField>
    <fullName>tributacao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>tributacao</description>
    <externalDeveloperName>tributacao</externalDeveloperName>
    <label>tributacao</label>
    <type>Checkbox</type>
</CustomField>