workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/valorbruto__c.field-meta.xml
<CustomField>
    <fullName>valorbruto__c</fullName>
    <description>valorbruto</description>
    <externalDeveloperName>valorbruto</externalDeveloperName>
    <label>valorbruto</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>