workspace-sf/force-app/main/default/objects/public_pagamento__x/fields/valorpagamento__c.field-meta.xml
<CustomField>
    <fullName>valorpagamento__c</fullName>
    <description>valorpagamento</description>
    <externalDeveloperName>valorpagamento</externalDeveloperName>
    <label>valorpagamento</label>
    <precision>12</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>